fix equipment stats alignment

--- a/src/equipment/Equipment.css
+++ b/src/equipment/Equipment.css
@@ -196,4 +196,5 @@
 }
 .equipment-stats table td:nth-child(2) {
   color: white;
+  text-align: right;
 }
